Products microservice refactoring
